--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Evans Fest QR Scanner</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Evans Fest Ticket Scanner</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; padding: 20px; }
+    video { width: 100%; max-width: 400px; border: 2px solid #ccc; margin-bottom: 20px; }
+    #result { font-size: 1.2em; margin-top: 20px; }
+    button { padding: 10px 20px; margin-top: 20px; font-size: 16px; }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Evans Fest 2026 – QR Ticket Scanner</h1>
-    <video id="preview"></video>
-    <div id="result"></div>
-    <button onclick="startScanner()">Start Scanner</button>
-  </div>
-  <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
-  <script src="script.js"></script>
+  <h1>Evans Fest Ticket Scanner</h1>
+  <video id="preview" autoplay></video>
+  <div id="result">Waiting for scan...</div>
+  <script src="qr-scanner.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
