--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>Evans Fest Ticket Scanner</h1>
   <video id="preview" autoplay></video>
   <div id="result">Waiting for scan...</div>
-  <script src="qr-scanner.min.js"></script>
+  <script src="qr-scanner.umd.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
