--- a/index.html
+++ b/index.html
@@ -40,20 +40,27 @@
         qrbox: { width: 300, height: 300 }
       },
       (decodedText, decodedResult) => {
-        console.log("QR Code:", decodedText);
-        alert("Scanned: " + decodedText);
+  console.log("QR Code:", decodedText);
+  
+  // Optional alert for testing
+  // alert("Scanned: " + decodedText);
 
-        // Optional: send to Google Script
-        // fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec?ref=" + encodeURIComponent(decodedText))
-        //   .then(res => res.json())
-        //   .then(data => console.log("Google Script says:", data));
-      },
-      (errorMessage) => {
-        // console.warn(errorMessage); // too noisy
+  // Send REF to Google Script
+  fetch("https://script.google.com/macros/s/AKfycbyK2Radk0l2uU58FVdfCK6ihN_KXyMCXh7FiUpKiUN9yTYaqG8_fn7ryMFWwuBe0G5l/exec?ref=" + encodeURIComponent(decodedText))
+    .then(res => res.json())
+    .then(data => {
+      // Display result
+      if (data.error) {
+        alert("❌ " + data.error);
+      } else {
+        alert("✅ " + data.name + " (" + data.email + ")\nTickets: " + data.adults + " adults, " + data.children + " children");
       }
-    ).catch(err => {
-      console.error("QR scanner failed:", err);
+    })
+    .catch(err => {
+      alert("❌ Error contacting server.");
+      console.error(err);
     });
+}
   </script>
 </body>
 </html>
